--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -3,7 +3,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgb(207, 200, 200);
+    background-color: #61a1ea;
   }
   
   .home-button {
