--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #c7c6c6;
+    background-color: #464646 ;
     padding: 1rem;
     text-align: center;
   }
@@ -8,7 +8,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: gray;
+    color: #848484 ;
   }
   
   .footer__nav-list {
@@ -24,5 +24,5 @@
   
   .footer__nav-link {
     text-decoration: none;
-    color:gray;
+    color:#848484;
   }
