--- a/src/components/navigationBar/NavigationBar.css
+++ b/src/components/navigationBar/NavigationBar.css
@@ -1,13 +1,13 @@
 html, body, #root, .navContainer {
   height: 75px;
-  margin: 0;
+  margin-top: 10;
 }
 
 .navContainer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #d3d3d3; /* Hellgrauer Hintergrund */
+  background-color: #464646 ; /* Hellgrauer Hintergrund */
   
 }
 
@@ -15,7 +15,7 @@ html, body, #root, .navContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  height: 100%;
+  height: 75%;
   width: 800px;   /*600 pixel bei 4 sachen "Unser Sortiment | Kategorie 1 | Kategorie 2 | Kategorie 3 " */
   padding-left: 20px;
 }
@@ -23,7 +23,9 @@ html, body, #root, .navContainer {
 .navButtons {
   margin: 0;
   border: none;
-  background-color: #d3d3d3;
+  border-radius: 10px;
+  background-color: #464646 ;
+  color: #f0f0f0;
   cursor: pointer;
   width: 100%;
   height: 100%;
@@ -31,7 +33,8 @@ html, body, #root, .navContainer {
 }
 
 .navButtons:hover {
-  background-color: #e0e0e0;
+  background-color: #61a1ea;
+  color: #1d1d1d;
 }
 
 .search-bar {
@@ -39,8 +42,10 @@ html, body, #root, .navContainer {
   justify-content: center;
   align-items: center;
   color: #a9a9a9; /* Etwas dunkleres Grau */
+  width: 500px;
   padding: 10px;
   padding-right: 50px;
+  padding-top: 30px;
   border-radius: 5px;
 }
 
