--- a/src/components/content/productList/ProductList.css
+++ b/src/components/content/productList/ProductList.css
@@ -2,8 +2,9 @@
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 2fr));
   gap: 20px;
-  margin-top: 20px; /* Abstand zur Navbar */
-  margin-bottom: 20px; /* Abstand zum Footer */
+  margin-left: 25px;
+  margin-top: 20px; 
+  margin-bottom: 20px; 
 }
 
 .product-item {
@@ -16,17 +17,18 @@
   flex-direction: column;
   border-radius: 0px;
   max-width: 220px;
+  box-shadow: 5px 15px 10px rgba(0, 0, 0, 0.2);
 }
 
 .product-item:hover {
-  transform: translateY(-5px);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  transform: translateY(-7px);
+  box-shadow: 10px 20px 10px rgba(0, 0, 0, 0.2);
 }
 
 .product-link {
   text-decoration: none;
   color: inherit;
-  flex: 1; /* Fülle den verbleibenden Platz innerhalb des product-item */
+  flex: 1; 
 }
 
 .image-container {
@@ -34,31 +36,31 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 10px; /* Vertikaler Abstand unter dem Bild */
+  margin-bottom: 10px; 
   padding: 10px;
-  overflow: hidden; /* Verhindert, dass Inhalte über den Rahmen hinausgehen */
+  overflow: hidden; 
 }
 
 .product-image {
   max-width: 200px;
   max-height: 200px;
-  object-fit: contain; /* Stellt sicher, dass das gesamte Bild in den Container passt */
+  object-fit: contain; 
   border-radius: 5px;
 }
 
 
 .product-name {
-  font-size: clamp(16px, 2vw, 20px); /* Dynamische Begrenzung der Textgröße */
-  line-height: 1.2em; /* Beispielhafte Zeilenhöhe */
-  max-height: calc(1.2em * 4); /* Maximale Höhe für bis zu 5 Zeilen */
-  overflow: hidden; /* Verhindert Überlauf */
-  text-overflow: ellipsis; /* Fügt '...' hinzu bei Textüberlauf */
-  display: -webkit-box; /* Verwendet eine WebKit-spezifische Box für das Text-Layout */
-  -webkit-box-orient: vertical; /* Setzt die Box-Ausrichtung auf vertikal */
-  -webkit-line-clamp: 4; /* Beschränkt den Text auf fünf Zeilen in WebKit-Browsern */
+  font-size: clamp(16px, 2vw, 20px); 
+  line-height: 1.2em; 
+  max-height: calc(1.2em * 4); 
+  overflow: hidden; 
+  text-overflow: ellipsis; 
+  display: -webkit-box; 
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 4; 
   line-clamp: 4;
-  word-wrap: break-word; /* Bricht lange Wörter */
-  word-break: break-word; /* Bricht lange Wörter */
+  word-wrap: break-word; 
+  word-break: break-word; 
   height: calc(1.2em * 4);
 }
 
@@ -71,7 +73,6 @@
 }
 
 
-/* Verhindere Überlappung der Produkte in der 2. Reihe */
 @media (max-width: 768px) {
   .products-list {
     grid-template-columns: 1fr;
