--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,28 +1,49 @@
+
+html, body, #root {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
+#root {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
+}
+
+
+.main-content {
+  flex: 1; 
+}
+
+
 .footer {
-    background-color: #464646 ;
-    padding: 1rem;
-    text-align: center;
-  }
-  
-  .footer__content {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #848484 ;
-  }
-  
-  .footer__nav-list {
-    display: flex;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  .footer__nav-item {
-    margin-left: 1rem;
-  }
-  
-  .footer__nav-link {
-    text-decoration: none;
-    color:#848484;
-  }
+  background-color: #30664d;
+  padding: 1rem;
+  text-align: center;
+  margin-top: auto; 
+}
+
+.footer__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #183326;
+}
+
+.footer__nav-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__nav-item {
+  margin-left: 1rem;
+}
+
+.footer__nav-link {
+  text-decoration: none;
+  color: #183326;
+}
