--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,28 +1,37 @@
 .header-container {
-    height: 125px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: #61a1ea;
-  }
-  
-  .home-button {
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    padding-left: 50px;
-  }
+  height: 175px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-image: url('/src/images/crystalBackground.png');
+}
 
-  .basket-button {
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    padding-right: 75px;
-  }
+.home-button {
+  width: 100px;
+  height: 85px;
+  cursor: pointer;
+  padding-left: 150px;
+}
 
-  
-  .header-title {
-    font-size: xx-large;
-    padding-left: 50px;
-    margin-left: 10px;
-  }
+
+.basket-button {
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  padding-right: 75px;
+}
+
+
+.header-title {
+  font-size: xx-large;
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-left: 30px;
+  margin-left: 10px;
+  color: rgb(255, 255, 255);
+  flex-grow: 1; /* Lässt den Titel den verfügbaren Platz einnehmen */
+  text-align: center; /* Zentriert den Text innerhalb des Titels */
+  display: flex;
+  align-items: center;
+  justify-content: center; /* Zentriert den Text innerhalb des flex-Containers */
+}
